# holsatus-flight

./: .gitmodules  Cargo.toml  Cargo.toml.bk  Embed.toml  README.md  system-overview.drawio
.cargo/: config.toml
.github/workflows/: common.yml  embedded.yml  integration.yml  rust.yml
common/: Cargo.toml  audit.md
common/src/: consts.rs  lib.rs  logging.rs  serial_manager.rs
common/src/airframe/: mod.rs
common/src/calibration/: acc_routine.rs  gyr_routine.rs  mag_routine.rs  mod.rs  sens3d.rs
common/src/drivers/: mod.rs
common/src/drivers/imu/: icm20948.rs  mod.rs
common/src/errors/: mod.rs
common/src/errors/adapter/: embedded_fatfs.rs  embedded_hal.rs  embedded_io.rs  embedded_storage.rs  mod.rs  postcard.rs  sequential_storage.rs
common/src/estimators/: extended_kalman.rs  linear_kalman.rs  mod.rs
common/src/filters/: angle_pid.rs  linear_lut.rs  mod.rs  motor_lin.rs  rate_pid.rs  statistics.rs
common/src/flight_modes/: mod.rs
common/src/geo/: mod.rs
common/src/health/: redundancy.rs
common/src/hw_abstraction/: mod.rs
common/src/mavlink/: command.rs  command_int.rs  mav_mode.rs  mav_state.rs  mission.rs  mod.rs  msg_generator.rs  params.rs  peers.rs
common/src/mavlink/generator/: mod.rs
common/src/mavlink/handler/: command.rs  message.rs  mod.rs  param.rs  vicon.rs
common/src/mavlink/messages/: mod.rs
common/src/mavlink/microservice/: heartbeat.rs  mod.rs
common/src/mavlink2/: instance.rs  manager.rs  mav_mode.rs  mav_state.rs  mod.rs  params.rs  serial_dummy.rs
common/src/mavlink2/handler/: command.rs  mod.rs  param.rs  vicon.rs
common/src/mavlink2/messages/: mod.rs
common/src/mavlink2/microservice/: heartbeat.rs  parameter.rs
common/src/parsers/: mod.rs
common/src/parsers/crsf/: mod.rs  packet_address.rs  packet_containers.rs  packet_type.rs
common/src/parsers/crsf/packet_definitions/: link_statistics.rs  mod.rs  rc_channels_packed.rs
common/src/parsers/crsf/packet_types/: device_ping.rs
common/src/parsers/sbus/: mod.rs
common/src/rc_mapping/: analog.rs  digital.rs  mod.rs
common/src/serial/: mod.rs  params.rs
common/src/shell/: mod.rs  usb_writer.rs
common/src/shell/commands/: arming.rs  calibrate.rs  inspect.rs  mavlink.rs  mod.rs  motor.rs  params.rs  system.rs
common/src/signals/: mod.rs
common/src/sync/: broadcast.rs  cancel.rs  channel.rs  lazy_lock.rs  logging.rs  mod.rs  multi_reqres.rs  once_lock.rs  procedure.rs  reqres.rs  reqres2.rs  rpc.rs  watch.rs
common/src/sync/serial/: bbbuffer.rs  buffer.rs  error.rs  grant.rs  mod.rs
common/src/sync/serial/hard/: mod.rs
common/src/sync/serial/soft/: mod.rs
common/src/task/: mod.rs
common/src/tasks/: _commander.rs  angle_loop.rs  arm_blocker.rs  att_estimator.rs  blackbox_collector.rs  blackbox_fat.rs  calibrator.rs  commander.rs  configurator.rs  configurator2.rs  controller_angle.rs  controller_mpc.rs  controller_mpc_old.rs  controller_rate.rs  eskf.rs  ez_logger.rs  gnss_reader.rs  imu_manager.rs  imu_reader.rs  in_flight_estimator.rs  mod.rs  motor_governor.rs  motor_test.rs  new_rate_controller.rs  param_storage.rs  position_estimator.rs  rate_loop.rs  rc_mapper.rs  rc_reader.rs  signal_logger.rs  signal_router.rs  signal_stats.rs  usb_manager.rs  usb_orientation_stream.rs
common/src/tasks/commander/: message.rs  mod.rs
common/src/tasks/rc_binder/: mod.rs  params.rs  rates.rs
common/src/types/: actuators.rs  blackbox.rs  config.rs  control.rs  device.rs  error.rs  flight_mode.rs  gcs_comm.rs  measurements.rs  mod.rs  sitl_std.rs  status.rs
common/src/utils/: buf_read_ext.rs  bytes_reader.rs  const_default.rs  crc8.rs  eio_compat.rs  func.rs  matrix.rs  mod.rs  rot_matrix.rs  u_types.rs
device/rp2040-dev/: Cargo.toml  build.rs
device/rp2040-dev/.cargo/: config.toml
device/rp2040-dev/src/: config.rs  dshot_pio.rs  main.rs  resource_setup.rs  resources.rs
device/std-device/: Cargo.toml  floor.gltf  sim_config.toml
device/std-device/src/: main.rs  rerun_logger.rs  resources.rs  thread_executor.rs  ticker.rs
device/std-test-device/: Cargo.toml  fpv-drone-2.gltf  sim_config.toml
device/std-test-device/src/: lib.rs  lockstep.rs  logger.rs  rerun_logger.rs  resources.rs
device/std-test-device/tests/: integration_test.rs
device/stm32f405-dev/: Cargo.toml  build-sizes  build.rs  ci-builds.just  justfile  memory.x
device/stm32f405-dev/.cargo/: config.toml
device/stm32f405-dev/src/: config.rs  dshot_pwm.rs  main.rs  resource_setup.rs  resources.rs
holsatus-sim/: Cargo.toml  sim_config.toml  some_file.toml
holsatus-sim/src/: config.rs  distortion.rs  lib.rs  motor_lin.rs  physics_sim.rs
src/: airframe.rs  cfg.rs  channels.rs  constants.rs  functions.rs  lib.rs  main.rs  main_core0.rs  main_core1.rs  main_high_prio.rs  main_low_prio.rs  messaging.rs  sbus_cmd.rs  storage.rs  t_acc_calibration.rs  t_arm_checker.rs  t_attitude_controller.rs  t_attitude_estimator.rs  t_blackbox_logging.rs  t_commander.rs  t_config_master.rs  t_flight_detector.rs  t_gyr_calibration.rs  t_icm20948_driver.rs  t_imu_governor.rs  t_led_blinker.rs  t_librarian.rs  t_mag_governor.rs  t_motor_governor.rs  t_motor_mixing.rs  t_rc_mapper.rs  t_sbus_reader.rs  t_status_printer.rs  t_vehicle_state.rs  task_PROTOTYPE.rs  task_attitude_controller.rs  task_blinker.rs  task_commander.rs  task_flight_detector.rs  task_motor_governor.rs  (+4 more)
src/board/: mod.rs  rp2040.rs
src/common/: mav_bitflag.rs  mod.rs  rotation_matrices.rs  types.rs
src/config/: definitions.rs  keyed_item.rs  mod.rs  mod_.rs  storage.rs
src/drivers/: mod.rs  task_icm20948_driver.rs
src/filters/: mod.rs  pid_controller.rs
src/geo/: mod.rs
src/health/: mod.rs
src/imu/: mod.rs  task_icm20948_driver.rs
src/mag/: mod.rs
src/mavlink/: heartbeat.rs  mod.rs  supported_msg.rs  t_mav_attitude.rs  t_mav_heartbeat.rs  t_mav_rc_channels.rs  t_mav_scaled_imu.rs  t_mav_template.rs
src/sensors/: mod.rs
src/shell/: mod.rs  t_shell.rs  usb_task.rs  writer_impl.rs
src/sync/: mod.rs  reqres_signal.rs
src/transmitter/: mod.rs  tx_12_profiles.rs
tools/: plot_orientation.py
(+7 files in other folders)
