[package]
edition = "2021"
name = "holsatus-flight"
authors = ["Peter Krull"]
version = "0.2.0"

[features]
default = ["overclock", "rp2040", "shell"]
mavlink = ["dep:mavlink"]
overclock = []
dualcore = []
rp2040 = []
shell = ["dep:embedded-cli", "dep:embedded-io", "dep:ufmt"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# RP2040 PIO
pio-proc = "0.2"
pio = "0.2"

# self-developed (or forked)
icm20948-async = { git = "https://github.com/peterkrull/icm20948-async"}
mag-calibrator-rs = { git = "https://github.com/peterkrull/mag-calibrator-rs" }
dshot-encoder = { git = "https://github.com/peterkrull/dshot-encoder" }

arraydeque = { version = "0.5", default-features = false }

# Forked
sbus = { git = "https://github.com/peterkrull/sbus" }
ahrs = { git = "https://github.com/peterkrull/ahrs-rs", default-features = false }

# Linear algebra / numbers
nalgebra = { version = "0.32", default-features = false, features = ["libm"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

# Embassy (Forked version for UartRx read_fifo_on_timeout and Watch channel)
embassy-sync =          { git = "https://github.com/peterkrull/embassy", branch = "holsatus", features = ["defmt"]}
embassy-time =          { git = "https://github.com/peterkrull/embassy", branch = "holsatus", features = ["defmt","defmt-timestamp-uptime"]}
embassy-executor =      { git = "https://github.com/peterkrull/embassy", branch = "holsatus", features = ["defmt","integrated-timers","arch-cortex-m","executor-thread","executor-interrupt","task-arena-size-32768"]}
embassy-rp =            { git = "https://github.com/peterkrull/embassy", branch = "holsatus", features = ["defmt","unstable-pac","time-driver","critical-section-impl","intrinsics","rom-v2-intrinsics"]}
embassy-usb =           { git = "https://github.com/peterkrull/embassy", branch = "holsatus", features = ["defmt"] }
embassy-futures =       { git = "https://github.com/peterkrull/embassy", branch = "holsatus" }
embassy-embedded-hal =  { git = "https://github.com/peterkrull/embassy", branch = "holsatus" }

mavlink = { git = "https://github.com/peterkrull/rust-mavlink", branch = "async-holsatus", default-features = false, features = ["common","embedded"], optional = true}

futures = { version = "0.3", default-features = false, features = ["async-await","cfg-target-has-atomic","unstable"]}
critical-section = "1.1"

static_cell = "2.0.0"
portable-atomic = { version = "1.6.0", features = ["critical-section"] }
ublox = { version = "0.4.5", default-features = false }
bitflags = { version = "2.4.2", default-features = false}

# These are used in the implementation of Holsatus Shell
embedded-cli = { path = "../embedded-cli-rs/embedded-cli/", optional = true }
embedded-io = { version = "0.6.1", optional = true }
embedded-io-async = { version = "0.6.1", optional = true }
ufmt = { version = "0.2.0", optional = true }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
