[package]
name = "holsatus-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common", default-features = false, features = ["arch-std"]}

nalgebra = "0.34.0"
rapier3d = "0.29.0"

rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_norway = "0.9.42"
rand = "0.9.2"
toml = "0.9.8"
static_cell = "2.1.1"

log = { version = "0.4.28" }
env_logger = { version = "0.11.8" }
clap = { version = "4.5.49", features = ["derive"] }

embedded-storage-async = "0.4.1"
