[package]
name = "rp2040-dev"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

common = { path = "../../common", default-features = false, features = [
    "portable-atomic-critical-section",
    "arch-cortex-m",
    "mavlink",
    "defmt",
] }

embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "task-arena-size-65536",
    "executor-interrupt",
    "executor-thread",
    "arch-cortex-m",
] }

embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = [
    "critical-section-impl",
    "rom-v2-intrinsics",
    "unstable-pac",
    "time-driver",
    "intrinsics",
    "rp2040"
] }

dshot-pio = { git = "https://github.com/peterkrull/dshot-pio", features = ["embassy-rp"] }

assign-resources = "0.4.1"
static_cell = "2.1.0"   # Used to allocate buffers and interrupt executors
portable-atomic = { version = "1.10.0", features = ["critical-section"] }

# cargo build/run --release
[profile.release]
panic = "abort"
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# cargo build/run (debug)
[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = true

# This is done to avoid tests etc from
# being built for the no_std binary
[[bin]]
name = "rp2040-dev"
path = "src/main.rs"
test = false
doctest = false
bench = false
