[package]
name = "rp2040-dev"
version = "0.1.0"
edition = "2021"


[features]
default = ["gnss", "usb"]

gnss = ["common/gnss"]
usb = ["common/usb"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"

defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

common = { path = "../../common", default-features = false, features = [
    "mavlink",
    "defmt",
    "gnss",
    "usb",
] }

embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "5bc8260", features = [
    "executor-interrupt",
    "executor-thread",
    "platform-cortex-m",
] }

embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "5bc8260", features = [
    "critical-section-impl",
    "rom-v2-intrinsics",
    "unstable-pac",
    "time-driver",
    "intrinsics",
    "rp2040"
] }

dshot-encoder = { git = "https://github.com/peterkrull/dshot-encoder" }

portable-atomic = { version = "1", features = ["critical-section"] }
assign-resources = "0.5.0"
static_cell = "2.1.0"
pastey = "0.2.1"
pio-proc = "0.3.0"
pio = "0.3.0"

# cargo build/run --release
[profile.release]
panic = "abort"
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# cargo build/run (debug)
[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = true

# This is done to avoid tests etc from
# being built for the no_std binary
[[bin]]
name = "rp2040-dev"
path = "src/main.rs"
test = false
doctest = false
bench = false
