[package]
name = "std-device"
version = "0.1.0"
edition = "2021"

[features]
default = ["rerun"]
rerun = ["dep:rerun"]

[dependencies]
common = { path = "../../common", default-features = false, features = ["arch-std", "log", "mpc", "mavlink"] }
holsatus-sim = { path = "../../holsatus-sim" }

# embassy-net = { path = "../../embassy-holsatus/embassy-net", features = [
#     "std", "tcp", "proto-ipv4"
# ] }
# embassy-net-tuntap = { path = "../../embassy-holsatus/embassy-net-tuntap" }

static_cell = "2"

log = { version = "0.4.22" }
env_logger = { version = "0.11.5" }
rerun = { version = "0.24.0", optional = true }

toml = "0.9.8"

rapier3d = { version = "0.29.0" }
embedded-io-adapters = {version = "0.6.1", features = ["tokio-1"]}
embedded-io = {version = "0.6.1", features = ["std"]}

embedded-storage-async = "0.4.1"

rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.49", features = ["derive"] }
tokio = { version = "1.48.0", features = ["io-std", "io-util", "macros", "net", "rt", "rt-multi-thread"] }

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy"
rev = "4d67633"
features = [
    "executor-thread",
    "arch-std",
    "log",
]
