[package]
name = "std-device"
version = "0.1.0"
edition = "2021"

[features]
rerun = ["dep:rerun"]

[dependencies]
common = { path = "../../common", default-features = false, features = ["log", "mpc", "mavlink"] }
holsatus-sim = { path = "../../holsatus-sim" }

static_cell = "2"

log = { version = "0.4.22" }
env_logger = { version = "0.11.5" }
rerun = { version = "0.30.2", optional = true }

toml = "0.9.8"

embedded-io-adapters = {version = "0.7.0", features = ["tokio-1"]}
embedded-io = {version = "0.7.1", features = ["std"]}

embedded-storage-async = "0.4.1"

rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.49", features = ["derive"] }
tokio = { version = "1.48.0", features = ["io-std", "io-util", "macros", "net", "rt", "rt-multi-thread"] }

critical-section = { version = "*", features = ["std"] }

embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "d22f3bf" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "d22f3bf" }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy", rev = "d22f3bf" }
embassy-executor-macros = { git = "https://github.com/embassy-rs/embassy", rev = "d22f3bf" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "d22f3bf" }