[package]
name = "stm32f405-dev"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"]}

common = { path = "../../common", default-features = false, features = [
    "arch-cortex-m",
    "mavlink",
    "defmt",
] }

embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "executor-interrupt",
    "executor-thread",
    "arch-cortex-m",
] }

embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = [
    "time-driver-tim2",
    "stm32f405rg",
    "memory-x",
    "defmt",
    "exti",
] }

# holsatus-hal = { path = "../../../holsatus-hal", features = ["stm32f405rg", "dshot"]}

dshot-encoder = { git = "https://github.com/peterkrull/dshot-encoder" }

assign-resources = "0.5.0"
static_cell = "2"   # Used to allocate buffers and interrupt executors
aligned = "0.4.2"   # Used to implement BlockDevice on wrapper type

# cargo build/run --release
[profile.release]
panic = "abort"
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# cargo build/run (debug)
[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = true

# This is done to avoid tests etc from
# being built for the no_std binary
[[bin]]
name = "stm32f405-dev"
path = "src/main.rs"
test = false
doctest = false
bench = false
